Multiple message support

--- a/BusyBotForm/appsettings.json
+++ b/BusyBotForm/appsettings.json
@@ -1,8 +1,17 @@
 {
-  "Interval": "00:00:10",
-  "FindClass": "Notepad",
-  "Message": "All work and no play makes Jack a dull boy.\r\n",
-  "LinesToWrite": 20
+  "Interval": "00:00:01",
+  "FindClass": "Notepadn a few?
+
+
+    ++",
+  "Messages": [
+    "I am busy right now, can you try back a little later? 30 minutes or so would be perfect.",
+    "At a critical debugging point, can I call you back in a few?",
+    "Just about to step out for a bit, can I call you when I get back?",
+    "I was just about to step out for a cup of coffee, can I call you when I get back?",
+    "Man, I am really slammed today, could you schedule something for tomorrow?"
+  ],
+  "LinesToWrite": 5
 }
     
 
